--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="en">
    <head>
-      <title>Ronaldo - Free Bootstrap 4 Template by Colorlib</title>
+      <title>Wowi - Free Bootstrap 4 Template by Colorlib</title>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
@@ -34,7 +34,7 @@
                <div class="col-lg-8 col-md-6 ftco-animate d-flex align-items-center fadeInUp ftco-animated">
                   <div class="text text-center">
                      <span class="subheading">Hey! I am</span>
-                     <h1>Ronaldo Fredrickson</h1>
+                     <h1>Wowi Fredrickson</h1>
                      <h2>I'm a
                         <span class="txt-rotate" data-period="2000" data-rotate="[ &quot;Web Designer.&quot;, &quot;Developer.&quot;, &quot;Photographer.&quot;, &quot;Marketer.&quot;, &quot;Blogger&quot; ]"><span class="wrap">Web Designer.</span></span>
                      </h2>
@@ -59,11 +59,11 @@
                         <h2 class="mb-4">About Me</h2>
                         <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
                         <ul class="about-info mt-4 px-md-0 px-2">
-                           <li class="d-flex"><span>Name:</span> <span>Ronaldo Fredrickson</span></li>
+                           <li class="d-flex"><span>Name:</span> <span>Wowi Fredrickson</span></li>
                            <li class="d-flex"><span>Date of birth:</span> <span>November 28, 1989</span></li>
                            <li class="d-flex"><span>Address:</span> <span>San Francisco CA 97987 USA</span></li>
                            <li class="d-flex"><span>Zip code:</span> <span>1000</span></li>
-                           <li class="d-flex"><span>Email:</span> <span>ronaldo@gmail.com</span></li>
+                           <li class="d-flex"><span>Email:</span> <span>Wowi@gmail.com</span></li>
                            <li class="d-flex"><span>Phone: </span> <span>+1-2234-5678-9-0</span></li>
                         </ul>
                      </div>
